Add python pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,70 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Prepare sample dataset
+        run: |
+          python - <<'PY'
+          import pandas as pd
+          from pathlib import Path
+
+          data = [
+              {
+                  "amount": 1500.0,
+                  "customer_age": 42,
+                  "minute_of_day": 875,
+                  "to_acc_volume": 3200.0,
+                  "session_duration": 65.0,
+                  "hour_of_day": 14,
+                  "day_of_week": 2,
+                  "fraud": 0,
+              },
+              {
+                  "amount": 250.0,
+                  "customer_age": 30,
+                  "minute_of_day": 120,
+                  "to_acc_volume": 400.0,
+                  "session_duration": 30.0,
+                  "hour_of_day": 4,
+                  "day_of_week": 5,
+                  "fraud": 0,
+              },
+              {
+                  "amount": 5000.0,
+                  "customer_age": 51,
+                  "minute_of_day": 1020,
+                  "to_acc_volume": 8000.0,
+                  "session_duration": 200.0,
+                  "hour_of_day": 18,
+                  "day_of_week": 1,
+                  "fraud": 1,
+              },
+              {
+                  "amount": 780.0,
+                  "customer_age": 36,
+                  "minute_of_day": 600,
+                  "to_acc_volume": 1200.0,
+                  "session_duration": 90.0,
+                  "hour_of_day": 10,
+                  "day_of_week": 0,
+                  "fraud": 0,
+              },
+              {
+                  "amount": 9800.0,
+                  "customer_age": 62,
+                  "minute_of_day": 30,
+                  "to_acc_volume": 15000.0,
+                  "session_duration": 400.0,
+                  "hour_of_day": 22,
+                  "day_of_week": 6,
+                  "fraud": 1,
+              },
+          ]
+
+          path = Path("notebook/data/fraud_dataset_raw.csv")
+          path.parent.mkdir(parents=True, exist_ok=True)
+          pd.DataFrame(data).to_csv(path, index=False)
+          PY
+
       - name: Run ingestion + training pipeline
         run: python -m src.components.data_ingestion
 
