--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Fraud Detection CI
+﻿name: Fraud Detection CI
 
 on:
   push:
@@ -9,106 +9,24 @@ on:
       - master
 
 jobs:
-  pipeline-smoke:
+  ci:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11", "3.13"]
     steps:
-      - name: Checkout sources
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Prepare sample dataset
-        run: |
-          python - <<'PY'
-          import pandas as pd
-          from pathlib import Path
+      - name: Placeholder lint step
+        run: echo "TODO: add linting (ruff/flake8)."
 
-          data = [
-              {
-                  "amount": 1500.0,
-                  "customer_age": 42,
-                  "minute_of_day": 875,
-                  "to_acc_volume": 3200.0,
-                  "session_duration": 65.0,
-                  "hour_of_day": 14,
-                  "day_of_week": 2,
-                  "fraud": 0,
-              },
-              {
-                  "amount": 250.0,
-                  "customer_age": 30,
-                  "minute_of_day": 120,
-                  "to_acc_volume": 400.0,
-                  "session_duration": 30.0,
-                  "hour_of_day": 4,
-                  "day_of_week": 5,
-                  "fraud": 0,
-              },
-              {
-                  "amount": 5000.0,
-                  "customer_age": 51,
-                  "minute_of_day": 1020,
-                  "to_acc_volume": 8000.0,
-                  "session_duration": 200.0,
-                  "hour_of_day": 18,
-                  "day_of_week": 1,
-                  "fraud": 1,
-              },
-              {
-                  "amount": 780.0,
-                  "customer_age": 36,
-                  "minute_of_day": 600,
-                  "to_acc_volume": 1200.0,
-                  "session_duration": 90.0,
-                  "hour_of_day": 10,
-                  "day_of_week": 0,
-                  "fraud": 0,
-              },
-              {
-                  "amount": 9800.0,
-                  "customer_age": 62,
-                  "minute_of_day": 30,
-                  "to_acc_volume": 15000.0,
-                  "session_duration": 400.0,
-                  "hour_of_day": 22,
-                  "day_of_week": 6,
-                  "fraud": 1,
-              },
-          ]
-
-          path = Path("notebook/data/fraud_dataset_raw.csv")
-          path.parent.mkdir(parents=True, exist_ok=True)
-          pd.DataFrame(data).to_csv(path, index=False)
-          PY
-
-      - name: Run ingestion + training pipeline
-        run: python -m src.components.data_ingestion
-
-      - name: Smoke test prediction endpoint
-        run: |
-          python - <<'PY'
-          from src.pipeline.predict_pipeline import CustomData, PredictPipeline
-
-          sample = CustomData(
-              amount=1500.0,
-              customer_age=42,
-              minute_of_day=875,
-              to_acc_volume=3200.0,
-              session_duration=65.0,
-              hour_of_day=14,
-              day_of_week=2,
-          )
-          preds = PredictPipeline().predict(sample.get_data_as_data_frame())
-          assert len(preds) == 1, "Expected a single prediction"
-          PY
+      - name: Placeholder tests step
+        run: echo "TODO: add test execution (pytest)."
