--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy via Self-Hosted Runner
+name: Build and Deploy to ECR/EC2 (self-hosted runner)
 
 on:
   push:
@@ -7,12 +7,14 @@ on:
   workflow_dispatch: {}
 
 env:
-  IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/fraud-detection
+  AWS_REGION: ${{ secrets.AWS_REGION }}
+  ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }} # repo name only
   CONTAINER_PORT: 5000
   SERVICE_NAME: fraud-app
 
 permissions:
   contents: read
+  id-token: write
 
 jobs:
   build-and-push:
@@ -26,35 +28,53 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          aws-region: ${{ env.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build and push image
         env:
           IMAGE_TAG: ${{ github.sha }}
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: ${{ env.ECR_REPOSITORY }}
+          IMAGE_NAME: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}
         run: |
-          docker build -t "$IMAGE_NAME:$IMAGE_TAG" -t "$IMAGE_NAME:latest" .
-          docker push "$IMAGE_NAME:$IMAGE_TAG"
-          docker push "$IMAGE_NAME:latest"
+          IMAGE_URI="$REGISTRY/$REPOSITORY"
+          docker build -t "$IMAGE_URI:$IMAGE_TAG" -t "$IMAGE_URI:latest" .
+          docker push "$IMAGE_URI:$IMAGE_TAG"
+          docker push "$IMAGE_URI:latest"
 
   deploy-self-hosted:
     runs-on: self-hosted
     needs: build-and-push
     steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          aws-region: ${{ env.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
       - name: Pull and restart container
         env:
           IMAGE_TAG: ${{ github.sha }}
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: ${{ env.ECR_REPOSITORY }}
+          IMAGE_NAME: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}
         run: |
-          docker pull "$IMAGE_NAME:$IMAGE_TAG" || exit 1
+          IMAGE_URI="$REGISTRY/$REPOSITORY"
+          docker pull "$IMAGE_URI:$IMAGE_TAG" || exit 1
           docker stop "$SERVICE_NAME" || true
           docker rm "$SERVICE_NAME" || true
-          docker run -d --name "$SERVICE_NAME" -p 80:$CONTAINER_PORT --restart unless-stopped "$IMAGE_NAME:$IMAGE_TAG"
+          docker run -d --name "$SERVICE_NAME" -p 80:$CONTAINER_PORT --restart unless-stopped "$IMAGE_URI:$IMAGE_TAG"
