Fix CI badge and add Python badge

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,8 @@
 on:
   push:
     branches:
-      - feature/streamlit-cleanup
+      - master
+      - feature/**
   pull_request:
     branches:
       - master
